--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>A Brief History of Programming</title>
   <link href="style1.css" type="text/css" rel="stylesheet" />
-  <!--<link href="hidden.css" type="text/css" rel="stylesheet" />-->
+  <link href="hidden.css" type="text/css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
 </head>
 
